@@ -1,6 +1,7 @@
 version 0.9+
 	* Add --locks-only option to cleanup subcommand
 	* Make cache file (for `status` subcommand) configurable
+	* Add `webstatus` subcommand
 
 version 0.9 Mon Dec 5 2011 by luispedro
 	* In the presence of a barrier(), rerun the jugfile
